<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="please_click_the_button_below">Please click the button below</string>
    <string name="welcome_to_my_app">Welcome to My App</string>
    <string name="next">next</string>
    <string name="instruction">Instruction</string>
    <string name="fab_description">fab description</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_name_hint">Shoe Name Hint</string>
    <string name="company_text">Company Text</string>
    <string name="company_text_hint">Company Text Hint</string>
    <string name="shoe_size_text">Shoe Size Text</string>
    <string name="shoe_size_hint">Shoe Size Hint</string>
    <string name="shoe_name_text">Shoe Name Text</string>
    <string name="description_text">Description \nText</string>
    <string name="description_hint">Description Hint</string>
    <string name="cancel_button_text">Cancel Button Text</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="save_button">Save Button</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout_menu">Logout Menu</string>
</resources>
